@@ -1,4 +1,5 @@
 0.4.3 - currently working on
+- [#2277] Fix: Unit test failure when pedantic is installed: testHeaderProxyInNonTestModeReallySendsCatchableHeader
 - [#2275] Feature: Added method hasTableColumn() in the testing framework
 
 0.4.2 - released 2008-10-07
